Refactor CollectionsVsStream.java